magpie/html5/widget/select/m-select.css
m-select{
//	display: inline-block;
	display: block;
	position: relative;
	z-index:1;
	height: 100%;
}

m-select .display>.fake-select,
m-select{
	min-height: 1.3em;
}


m-select>.display,
m-select [placeholder],
m-select [result]{
	height: 100%;
}


m-select [result],
m-select[selection] [placeholder]{
	height: 0px;
	overflow: hidden;
}

m-select[selection] [result],
m-select [placeholder]{
	height: initial;
	overflow: inherit;
}

m-select .list{
	width:100%;
	position: relative;
	overflow-y: hidden;
	height: 0!important;	
}

m-select[opened] .list{
	position: absolute;
	height:initial;
	overflow-y: visible;
}

m-option,
m-select .list{
	background: hsla(0, 0%, 100%, 1);
}


m-select .display>[result]>m-option{
	background: inherit;
}

m-select .display{
	z-index:100;
}

m-select .display{
	width: auto;
}

m-select .display>.fake-select-overlayout,
m-select .display>.fake-select{
	position: absolute;    
	top:0;
	z-index: -1;
	width: 100%;
	height: 100%;
}
m-select .display>.fake-select-overlayout{
	opacity: 0;
}



m-option[selected]{ 
	background: hsla(0, 0%, 79%, 1);
}

m-option[disabled]:hover{
	background: inherit!important;
	cursor: default!important;
}

m-select [placeholder],
m-select [result]{
	white-space: nowrap;
	text-align:left;
	padding-left:1em;
	padding-right:1em;
	width: auto;
	margin-right: 1.5em;
}

m-select [placeholder] m-option,
m-select [result] m-option{
	padding-left: 0em;
	padding-right: 0em;	
}

m-option{
	display: block;
	white-space: nowrap;
	padding-left:1em;
	padding-right:2em;
	text-indent: 0em;
}

